<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_espace_enseignant"
            android:title="@string/espace_enseignant"
            android:icon="@drawable/icon_menu"
            />
        <item
            android:id="@+id/nav_marquer_presence"
            android:title="@string/marquer_presence"
            android:icon="@drawable/icon_take_presences"
            />
        <item
            android:id="@+id/nav_gerer_absence"
            android:title="@string/param"
            android:icon="@drawable/icon_manage_absences"/>
        <item
            android:id="@+id/nav_ajouter_seance"
            android:title="@string/ajouter_seance"
            android:icon="@drawable/icon_mail_add_class"
            />
        <item
            android:id="@+id/nav_changer_seance"
            android:title="@string/change_seance"
            android:icon="@drawable/icon_mail_add_class"/>

    <item
        android:id="@+id/nav_modifier_profile"
        android:title="@string/edit"
        android:icon="@drawable/icon_parametre" />

    <item
        android:id="@+id/nav_supprimer_profile"
        android:title="@string/delete"
        android:icon="@drawable/icon_delete_red" />


    <item
        android:id="@+id/nav_deconnecter"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout" />

    </group>

</menu>