<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light"
        android:gravity="center"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/offline_mode"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:background="@color/black_light"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/offline_mode_title1"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/red_light"
        android:drawableBottom="@drawable/icon_error_red"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:visibility="visible">


        <EditText
            android:id="@+id/id_enseignant"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_toStartOf="@id/jour_seance"
            android:layout_toLeftOf="@id/jour_seance"
            android:hint="@string/votre_id"
            android:inputType="number"
            android:textSize="@dimen/_14sdp"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/jour_seance"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp" />

        <Spinner
            android:id="@+id/heure_seance"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_toEndOf="@id/jour_seance"
            android:layout_toRightOf="@id/jour_seance" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/jour_seance"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/button_empty_color_accent_round"
            android:drawableEnd="@drawable/ic_next"
            android:drawableRight="@drawable/ic_next"
            android:padding="@dimen/_5sdp"
            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_1"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/help1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/id_etudiant"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:hint="@string/entrer_id_etudiant"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:id="@+id/ajouter"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_toEndOf="@id/id_etudiant"
                android:layout_toRightOf="@id/id_etudiant"
                android:contentDescription="@string/image_larg"
                android:src="@drawable/icon_add_coloraccent" />
        </RelativeLayout>


        <TableLayout
            android:id="@+id/table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help1"
            android:layout_marginTop="@dimen/_5sdp"
            android:stretchColumns="0,1,2,3,4"
            android:visibility="visible">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/backround_greyblue_light"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:background="@drawable/backround_greyblue_light"
                    android:gravity="center"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/number"
                    android:textColor="@color/black"

                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="3dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:background="@drawable/backround_greyblue_light"
                    android:gravity="center"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/id"

                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:background="@drawable/backround_greyblue_light"
                    android:gravity="center"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/seance"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:background="@drawable/backround_greyblue_light"
                    android:gravity="center"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/date_absence"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="7dp"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_gravity="center"
                    android:background="@drawable/backround_greyblue_light"
                    android:gravity="center"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/supprimer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/table" />


        <Button
            android:id="@+id/terminer_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recycler"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_empty_color_accent_round"
            android:padding="@dimen/_5sdp"
            android:text="@string/finish"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>


</RelativeLayout>