<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_empty_black"
    android:orientation="vertical"

    >


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/your_notifications"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:visibility="gone"

        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_top" />

    <TableLayout
        android:id="@+id/options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/vu_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/mark_all_seen"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delete_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/Delete_all"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/notification_vide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/notification_vide"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone" />

</RelativeLayout>