<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_50sdp"
            >

            <Button
                android:id="@+id/bar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:background="@color/black"
                android:text="@string/bar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"

                />

            <Button
                android:id="@+id/circle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:textAlignment="center"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:background="@color/white"
                android:text="@string/circle"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/choix"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:stretchColumns="0,1"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="gone"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:ignore="TooDeepLayout">

            <Spinner
                android:id="@+id/type"
                android:layout_width="100dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_column="0"
                android:gravity="center"
                />

        </TableRow>
    </TableLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/pourcentage"
        android:textSize="@dimen/_14sdp"
        android:visibility="visible" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible" />



</LinearLayout>